--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   responsive_sizer: ^3.3.1
   gap: 
+  animate_do: ^4.2.0
 
 dev_dependencies:
   flutter_test:
