--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   gap: 
   animate_do: ^4.2.0
   flutter_staggered_grid_view: ^0.7.0
+  flutter_staggered_animations: ^1.1.1
+  glassmorphism: ^3.0.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
