--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   responsive_sizer: ^3.3.1
+  riverpod: 
+  flutter_riverpod: 
+  hooks_riverpod: 
   gap: 
   animate_do: ^4.2.0
   flutter_staggered_grid_view: ^0.7.0
